--- a/src/styles/kontaktai.scss
+++ b/src/styles/kontaktai.scss
@@ -84,6 +84,10 @@ main {
         right: 1116px;
         color: var(--dark-green);
 
+        a {
+            color: var(--dark-green);
+        }
+
         h1 {
            font-weight: normal;
            margin-bottom: 200px;
