--- a/src/styles/apie-mus.scss
+++ b/src/styles/apie-mus.scss
@@ -104,7 +104,7 @@ main {
         display: block;
         object-fit: cover;
         width: 90%;
-        height: 90%;
+        height: 450px;
 
         border-radius: 50px;
      
