--- a/src/styles/gallery.scss
+++ b/src/styles/gallery.scss
@@ -56,6 +56,34 @@
         .icon-overlay {
             left: 60%;
         }
+        
+
+          &.active {
+                position: fixed;
+                max-width: 1200px;
+                transform: translate(0);
+                left: 0px;
+                right: 0px;
+                top: 0;
+                bottom: 0;
+                margin: auto;
+                z-index: 2;
+                animation-name: expande; /* Specify the name of the animation */
+                animation-duration: 0.3s;
+
+                & > *:not(.icon-overlay) {
+                    width: 100%;
+                    height: 90%;
+                    object-fit: cover;
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    right: 0;
+                    bottom: 0;
+                    margin: auto;
+                    border-radius: 56px;
+                }
+            }
 
         & > *:not(.icon-overlay) {
             width: 100%;
@@ -80,12 +108,53 @@
             position: relative;
             top: -5.1px;
             right: -5%;
+            transition: 0.3s;
+
+            @keyframes expande {
+                from {
+                    width: 0;
+                    height: 0;
+                }
+
+                to {
+                    width: 80%;
+                    height: 600px;
+                }
+            }
+
+            &.active {
+                position: fixed;
+                max-width: 1200px;
+                transform: translate(0);
+                left: 0px;
+                right: 0px;
+                top: 0;
+                bottom: 0;
+                margin: auto;
+                z-index: 2;
+                animation-name: expande; /* Specify the name of the animation */
+                animation-duration: 0.3s;
+
+                & > *:not(.icon-overlay) {
+                    width: 100%;
+                    height: 90%;
+                    object-fit: cover;
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    right: 0;
+                    bottom: 0;
+                    margin: auto;
+                    border-radius: 56px;
+                }
+            }
 
             & > *:not(.icon-overlay) {
                 width: 100%;
                 height: 100%;
                 object-fit: cover;
                 cursor: url("/icons/pointer-green.svg"), pointer;
+                transition: 0.3s;
             }
         }
     }
