--- a/src/styles/gallery.scss
+++ b/src/styles/gallery.scss
@@ -195,9 +195,10 @@
     width: 100%;
     height: 100%;
     z-index: 1000;
-    background: rgb(0, 74, 78, 0.8);
+    background: rgba(0, 74, 78, 0);
     user-select: none;
     display: none;
+    transition: 1s;
 
     
     .video-play-icon {
