--- a/src/styles/gallery.scss
+++ b/src/styles/gallery.scss
@@ -73,6 +73,7 @@
             &.active {
                 position: fixed;
                 max-width: 1200px;
+                width: 80%;
                 transform: translate(0);
                 left: 0px;
                 right: 0px;
@@ -85,7 +86,7 @@
 
                 & > *:not(.icon-overlay) {
                     width: 100%;
-                    height: 90%;
+                    height: 60%;
                     object-fit: cover;
                     position: absolute;
                     top: 0;
@@ -137,6 +138,7 @@
             &.active {
                 position: fixed;
                 max-width: 1200px;
+                width: 80%;
                 transform: translate(0);
                 left: 0px;
                 right: 0px;
@@ -149,7 +151,7 @@
 
                 & > *:not(.icon-overlay) {
                     width: 100%;
-                    height: 90%;
+                    height: 60%;
                     object-fit: cover;
                     position: absolute;
                     top: 0;
