--- a/src/styles/apie-mus.scss
+++ b/src/styles/apie-mus.scss
@@ -99,19 +99,28 @@ main {
 .video-section {
     border-radius: 40px;
     position: relative;
+    width: 90%;
+    height: 450px;
+
+    border-radius: 50px;
+ 
+    max-width: 1213px;
+    max-height: 629px;
+    margin: auto;
+    margin-bottom: 100px;
+    overflow: hidden;
 
     .video {
-        display: block;
+        width: 100%;
+        height: 100%;
         object-fit: cover;
-        width: 90%;
-        height: 450px;
+    }
 
-        border-radius: 50px;
-     
-        max-width: 1213px;
-        max-height: 629px;
-        margin: auto;
-        margin-bottom: 100px;
+    .video-overlay {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
     }
 
 
