--- a/src/styles/karjera.scss
+++ b/src/styles/karjera.scss
@@ -148,6 +148,10 @@ main {
             justify-content: center;
             align-items: center;
             gap: 20px;
+
+            img {
+                width: clamp(40px, 6vw, 61px);
+             }
         }
     }
 }
