--- a/src/styles/socialine-atsakomybe.scss
+++ b/src/styles/socialine-atsakomybe.scss
@@ -162,7 +162,7 @@ header {
     
             svg {
                 position: relative;
-                width: 10vw;
+                width: clamp(120px, 12vw, 140px);
                 height: 150px;
                 top: 0px;
             }
@@ -190,6 +190,10 @@ header {
             flex-direction: column;
             gap: 20px;
             color: var(--blue-dark);
+
+            img {
+                width: clamp(40px, 6vw, 61px);
+            }
         }
 
         .white-icon {
