--- a/src/styles/mentoryste.scss
+++ b/src/styles/mentoryste.scss
@@ -53,7 +53,7 @@ main {
         background-size: cover;
         position: absolute;
         top: -50px;
-        right: 0px;
+        right: -50px;
         width: 1643px;
         height: 1243px;
         z-index: -1;
@@ -123,9 +123,10 @@ main {
             .icon {
                 text-align: center;
 
-                img {
-                    height: 70px;
-                }
+             
+            img {
+                width: clamp(40px, 6vw, 61px);
+             }
             }
         }
     }
