--- a/src/styles/socialine-atsakomybe.scss
+++ b/src/styles/socialine-atsakomybe.scss
@@ -237,7 +237,6 @@ header {
     pointer-events: none;
 }
 
-
 .tech-education, .sveika-gyvensena, .bendruomenes-projektai {
     position: relative;
     top: 150px;
@@ -263,6 +262,12 @@ header {
         right: 0;
         border-radius: 200px 0 0 200px;
         object-fit: cover;
+        opacity: 0;
+        transition: 0.3s;
+
+        &.visible {
+            opacity: 1; 
+          }
     }
 
     .content {
@@ -313,6 +318,8 @@ header {
                     position: relative;
                     width: 95%;
                     padding-bottom: 50px;
+                    opacity: 1;
+                    transition: 0.3s;
                     
                     .project-title {
                         border-bottom: 1px solid var(--blue-dark);
@@ -337,6 +344,15 @@ header {
                     }
                 }
             }
+        }
+
+
+        .projects:hover .project {
+            opacity: 0.5; /* Reduce opacity for all projects when any project is hovered */
+        }
+          
+        .projects .project:hover {
+        opacity: 1; /* Full opacity for the project under the mouse pointer */
         }
         
     }
