--- a/src/styles/apie-mus.scss
+++ b/src/styles/apie-mus.scss
@@ -226,7 +226,7 @@ main {
         position: absolute;
         top: 100px;
         left: 0;
-        width: 600px;
+        width: 515px;
         height: 800px;
         border-radius: 0 200px 0 0;
         overflow: hidden;
@@ -350,7 +350,7 @@ main {
     color: var(--dark-green);
     .managers {
         display: grid;
-        grid-template-columns: repeat(4, minmax(200px, 1fr));
+        grid-template-columns: repeat(4, minmax(150px, 1fr));
         grid-auto-rows: 380px;
         gap: 20px;
         margin-top: 70px;
@@ -370,7 +370,7 @@ main {
             }
 
             .ocupation {
-                font-size: clamp(22px, 1.2vw, 25px);
+                font-size: clamp(20px, 1.2vw, 25px);
             }
            
         }
@@ -378,10 +378,6 @@ main {
 }
 
 @media (max-width: 1600px) {
-
-    .values .foto-1 img {
-        width: 85.8%;
-    }
 
     .values-2 .shape-4 {
         top: -134px;
@@ -411,4 +407,118 @@ main {
         width: 70px;
     }
     
+}
+
+
+@media (max-width: 850px){
+    * {
+        cursor: default !important;
+    }
+  
+    .section-1 .content {
+        grid-column: 1/4;
+        width: 90%;
+        margin: auto;
+        text-align: justify;
+    }
+
+    .timeline .dates-content {
+        left: 0;
+        width: 90%;
+        margin: auto;
+        text-align: justify;
+        
+        h3 {
+            margin-bottom: 15px;
+        }
+    }
+
+    .foto-1 {
+        display: none;
+    }
+   
+    .values {
+        grid-template-rows: 430px;
+        width: 90%;
+        margin: auto;
+        .content {
+            grid-row: 1;
+            grid-column: 1/6;
+            top: 50px;
+            left: 0;
+    
+            .icons {
+                flex-wrap: wrap;
+    
+                .icon {
+                    width: 42%;
+                }
+            }
+        }
+    }
+
+    .values-2 {
+        grid-template-rows: 434px 150px;
+        .shape-4 {
+            display: none;
+        }
+
+        .content {
+            grid-column: 1/7;
+            color: var(--dark-green);
+            top: 50px;
+            width: 90%;
+            margin: auto;
+
+            .numbers {
+                flex-wrap: wrap;
+
+                .number {
+                    width: 40%;
+                }
+            }
+        }
+    }
+
+
+    .managament {
+        width: 90%;
+        margin: auto;
+
+        .managers {
+            grid-template-columns: 1fr 1fr;
+
+            .manager {
+                line-height: 35px;
+            }
+        }
+    }
+}
+
+
+
+@media (max-width: 426px){
+  
+
+    .section-1 {
+        margin-top: -200px;
+
+        .content {
+            width: calc(100vw - 10%);
+            grid-column: 1;
+            padding-left: 10%;
+        }
+    }
+
+    .values-2 {
+        grid-template-rows: 434px 300px;
+    }
+
+    .managament {
+
+        .managers {
+            grid-template-columns: 1fr;
+            margin-top: 20px;
+        }
+    }
 }
