--- a/src/styles/darbo-skelbimai.scss
+++ b/src/styles/darbo-skelbimai.scss
@@ -104,7 +104,7 @@ main {
             grid-template-columns: 150px 1fr 150px 150px 100px;
             align-items: center;
             width: 90vw;
-            height: 130px;
+            min-height: 130px;
         }
 
         .job-title {
@@ -132,8 +132,6 @@ main {
             text-decoration: underline;
             text-align: center;
             margin: 30px auto;
-            position: relative;
-            left: -100px;
        }
 
        .no-job {
@@ -219,3 +217,75 @@ footer {
             }
         }
 }
+
+
+@media (max-width: 768px){
+   .section-1 {
+    grid-template-rows: 463px;
+    .shape-1 {
+        width: 779px;
+        height: 500px;
+        left: auto;
+        right: -5px;
+    }
+
+    .content {
+        transform: translate(120px, 200px);
+    }
+   }
+
+   .section-jobs {
+    margin-top: 25px;
+    width: 90%;
+    margin: auto;
+
+    .jobs-heading {
+        grid-template-columns: repeat(3, 1fr);
+
+        h3 {
+            grid-column: 1/4;
+            margin-bottom: 15px;
+        }
+
+        p:nth-of-type(1) {
+            grid-column: 1;
+        }
+
+    }
+
+    .jobs-main .job {
+        grid-template-columns: repeat(3, 1fr);
+
+        .job-title, hr {
+            grid-column: 1/4;
+            margin-bottom: 30px;
+        }
+
+        .job-city, .job-logo, .job-link {
+            grid-row: 2;
+            margin-bottom: 15px;
+        }
+    }
+   }
+   
+  
+
+   .other-jobs {
+    grid-template-columns: repeat(3, 1fr);
+    width: 90%;
+    margin: auto;
+    .content {
+        grid-column: 1/4;
+   }
+   }
+}
+
+@media (max-width: 768px){
+    .section-1 {
+     .content {
+         transform: translate(30px, 200px);
+     }
+    }
+ }
+ 
+
