--- a/src/styles/karjera.scss
+++ b/src/styles/karjera.scss
@@ -458,6 +458,10 @@ footer {
     color: var(--burgundy-extra-light) !important;
     margin-top: 150px;
 
+    a {
+        color: var(--burgundy-extra-light) !important;
+    }
+
     .social {
         a:before {
             background: var(--burgundy-extra-light) !important;
