--- a/src/styles/gallery.scss
+++ b/src/styles/gallery.scss
@@ -103,7 +103,7 @@
     width: 100%;
     height: 100%;
     z-index: 1000;
-    background: rgba(0, 74, 78, 0);
+    background: rgba(0, 74, 78, 0.8);
     user-select: none;
     display: none;
     transition: 1s;
@@ -370,7 +370,7 @@
 @media (max-width: 769px) {
     * {
         user-select: none;
-        cursor: pointer;
+        cursor: default;
     }
 
     .gallery {
@@ -402,9 +402,13 @@
 
             .icon-overlay {
                 left: 35%;
-                display: block !important;
             }
         }
+    }
+
+    .gallery .left.gallery-item > *:not(.icon-overlay),
+    .gallery .right .right-image > *:not(.icon-overlay) {
+        cursor: default;
     }
 
    
