--- a/src/styles/naujienos-vidus.scss
+++ b/src/styles/naujienos-vidus.scss
@@ -88,9 +88,13 @@ main {
 }
 
 @media (max-width: 1025px){
-    .news-content .content {
-        grid-column: 1/6;
-        margin-left: 50px;
-        width: 85vw;
+    .news-content {
+        grid-template-columns: 1fr;
+        .content {
+            grid-column: 1/3;
+            width: 90%;
+            margin: auto;
+        }
+        margin-bottom: 100px;
     }
 }
