--- a/src/styles/naujienos.scss
+++ b/src/styles/naujienos.scss
@@ -99,6 +99,10 @@ main {
             flex-direction: column;
             gap: 30px; 
         }
+
+        .article-category {
+            text-decoration: underline;
+        }
     }
 
     article:first-of-type img {
@@ -152,6 +156,95 @@ main {
 
         .news-navigation {
             margin-top: 50px;
+        }
+    }
+}
+
+
+@media (max-width: 769px){
+    * {
+        user-select: none;
+        cursor: default;
+    }
+
+    .news {
+        grid-template-columns: 1fr;
+        grid-auto-rows: minmax(420px, auto);
+
+        h1 {
+            font-weight: normal;
+            grid-column: 1;
+            top: 0px;
+            width: 90%;
+            margin: auto;
+        }
+
+        .content {
+            grid-template-columns: 1fr;
+            font-weight: normal;
+            text-align: center;
+            width: 90%;
+            margin-top: -225px;
+
+            .categories {
+                text-align: center;
+                width: 90%;
+                grid-column: 1;
+                margin: auto;
+            }
+        }
+        article {
+            grid-column: 1;
+            grid-template-columns: 1fr;
+    
+            .article-image {
+                position: relative;
+                width: 120%;
+                height: 200px;
+                left: -10%;
+                border-radius: 0 !important;
+                grid-column: 1/3;
+                transform: rotate(-4deg) !important;
+            }
+    
+            .article-content {
+                width: 90%;
+                grid-column: 1/3;
+                margin: 30px auto;
+                text-align: start;
+
+                h3 {
+                    margin: 15px 0;
+                }
+            }
+        }
+
+
+        .news-navigation {
+            grid-column: 1;
+            justify-content: center;
+        }
+    }
+}
+
+@media (max-width: 426px){
+
+   
+
+
+    .news {
+        grid-auto-rows: auto;
+
+        h1 {
+            margin-top: 150px;
+        }
+    
+        .content {
+            margin-top: 0px;
+        }
+
+        article .article-content {
+            margin-top: 0;
         }
     }
 }
