--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -36,6 +36,10 @@ src: url("/fonts/CircularXXWeb-Book.woff2") format("woff2");
 	padding: 0;
 	box-sizing: border-box;
 	text-decoration: none;
+	
+	@media (max-width: 768px) {
+		cursor: default !important;
+	};
 }
 
 body {
