--- a/src/styles/partneriu-interviu.scss
+++ b/src/styles/partneriu-interviu.scss
@@ -324,7 +324,6 @@ footer {
 
 @media (max-width: 1025px){
     header {
-      
         .right {
             color: var(--blue-extra-light);
             .menu .line,
@@ -341,7 +340,7 @@ footer {
 @media (max-width: 769px){
     .section-1 {
         grid-template-columns: 1fr;
-        grid-template-rows: 620px 700px;
+        grid-template-rows: 700px;
         width: 100%;
         min-height: 600px;
   
@@ -389,5 +388,58 @@ footer {
                 color: var(--green-light);
             }
           }
-    }  
+    } 
+    
+    .news {
+        margin-top: -150px;
+        .content {
+            grid-template-columns: 1fr;
+
+            article {
+              grid-template-columns: 1fr;
+              grid-auto-rows: auto;
+
+                &:first-of-type .article-image,
+                &:last-of-type .article-image  {
+                    border-radius: 0;
+
+                    img {
+                        border-radius: 0;
+                    }
+                }
+                .article-image {
+                    width: 120%;
+                    transform: rotate(-4deg);
+                    left: -10%;
+                    height: 250px;
+                    top: 0;
+
+                    img {
+                        height: 100%;
+                        object-fit: cover;
+                    }
+
+                    .shape-3 {
+                        display: none;
+                    }
+                }
+            }
+        }
+
+        .content {
+            article {
+                .article-content {
+                    left: 0;
+                    width: 90%;
+                    margin: 50px auto;
+                }
+            }
+
+            .more {
+                position: static;
+                grid-column: 1;
+                text-align: center;
+            }
+        }
+    }
 }
